  * New email games now show up in the game list immediately, flags
  are preset for europe to give the user an idea what to set at all.
  * Show last move in tooltip for the "to move" icon (suggested by Dhanish)
  * move delete in/outbox button furter away from Process Inbox (suggested by Dhanish)
  * Yes/No dialogue before cleaning the in/outbox (suggeted by Dhanish)
- Tools Menu
  * Remove Novag entry
  * Add "Connect Hardware" 
  * Add "Connect Hardware / Configure" usable for Novag & Input Engine
  * Add "Connect Hardware / Input Engine"
  * Add "Connect Hardware / Novag Citrine"
  * Make hardware connect buttons visibility configurable 
    (remove it needs restart)
- Novag Citrine
  * Remove own config (replaced by unified dialogue)
  * Use unified "Connect Hardware" dialoge and parameters thereof
  * Use "hardware connect" button
  * Set button images according to current state
- Input Engine Support:
  * Rework of GUI
  * Handle "illegal moves" (warn user, ignore them)
  * Add "rotate board"
  * Add Synchronise button
  * Add Miniboard to the console
  * Add NLS
  * Add Support for DGT XL external clock
  * Colour various states in move area
  * To use a DGT Electronic Chess Board  dgtdrv V1.21 or higher is
    required. (http://dgtdrv.sf.net)
  * Make window dockable
- Docs
  * Update Novag part (as far as possible)
  * Add "Connect Hardware" with subtopics to english help
  * Add "Input Engine" including some remarks about DGT
- NLS
  * Add tags for all hardware connection dialogues
  * German translation for the tags added
- Database information
  * Add the ability to write Dublin Core metadata for a Scid database
  by means of Tools / Database information. This includes reading
  metadata from a sme file.
  * menu item disabled for future use
- Mask (Tree window) : 
	* added menu entry to remove NAG value for a move
	* added entry in popup menu to enter moves not present in Tree